kubernetes/apps/infra/traefik/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
      allowedRoutes:
        namespaces:
          from: All

    - name: tls-passthrough
      port: 443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
