kubernetes/apps/infra/traefik/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: infra
spec:
  entryPoints:
    - websecure
    - traefik
  routes:
    - kind: Rule
      match: Host(`traefik.home.mattprovost.dev`)
      middlewares:
        - name: infra-authentik@kubernetescrd
      services:
        - kind: TraefikService
          name: api@internal
